Detalle de descuentos

--- a/ProyectoCaC/pages/descuentos.html
+++ b/ProyectoCaC/pages/descuentos.html
@@ -1,98 +1,144 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Descuento Farmacia Plaza la Carolina</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Farmacia</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Pedidos Online</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cómo llegar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Descuentos Exclusivos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">X</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <h1>Descuentos Exclusivos</h1>
-    <h2>Convenios únicos par cuidar tu bolsillo.</h2>
-     <div class="accordion,flex-container" id="accordionPanelsStayOpenExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Salta
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-            <div class="accordion-body">
-                <ul>
-              <li><strong>20% de descuento en medicamentos en caja</strong></li>
-              <li>Presentando credencial</li>
-              <li>No aplica a perfumería y accesorios</li>
-              <li>No acumulable con otros descuentos
-                de obra social.</li>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item,flex-cointainer">
-          <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Descuento Farmacia Plaza la Carolina</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+  <!-- <link rel="stylesheet" href="../css/style.css"> -->
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
+    <div class=" container-fluid">
+      <a class="navbar-brand" href="#">Farmacia</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Pedidos Online</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cómo llegar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Descuentos Exclusivos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">X</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <h1>Descuentos Exclusivos</h1>
+  <h2>Convenios únicos par cuidar tu bolsillo.</h2>
+  <div class="accordion,flex-container" id="accordionPanelsStayOpenExample">
     <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-            Misiones
-          </button>
-        </h2>
-        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-          <div class="accordion-body">
-            <li><strong>15% de descuento en medicamentos en caja</strong></li>
-              <li>Presentando credencial</li>
-              <li>No aplica a perfumería y accesorios</li>
-              <li>No acumulable con otros descuentos
-                de obra social.</li>
-          </div>
+      <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+          data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+          Micro omnibus Primera Junta- Linea 324
+        </button>
+      </h2>
+      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+        aria-labelledby="panelsStayOpen-headingOne">
+        <div class="accordion-body">
+          <ul>
+            <li><strong>20% de descuento en medicamentos en caja</strong></li>
+            <li>Presentando credencial</li>
+            <li>No aplica a perfumería y accesorios</li>
+            <li>No acumulable con otros descuentos
+              de obra social.</li>
         </div>
       </div>
-      <div class="accordion-item,flex-container">
-        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                    Jujuy
-                  </button>
-                </h2>
-                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-                  <div class="accordion-body">
-                    <li><strong>10% de descuento en medicamentos en caja</strong></li>
-              <li>Presentando credencial</li>
-              <li>No aplica a perfumería y accesorios</li>
-              <li>No acumulable con otros descuentos
-                de obra social.</li>
-                  </div>
-                </div>
+    </div>
+    <div class="accordion-item,flex-cointainer">
+      <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseTwo">
+                Parque industrial Cir2
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingTwo">
+              <div class="accordion-body">
+                <li><strong>15% de descuento en medicamentos en caja</strong></li>
+                <li>Presentando credencial</li>
+                <li>No aplica a perfumería y accesorios</li>
+                <li>No acumulable con otros descuentos
+                  de obra social.</li>
               </div>
             </div>
-        </body>
-        <p><a href="../index.html">Volver...</a></p>
+          </div>
+          <div class="accordion-item,flex-cointainer">
+            <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseTwo">
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+                  crossorigin="anonymous"></script>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                      aria-controls="panelsStayOpen-collapseTwo">
+                      Grupo Plaza - Linea 129
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-headingTwo">
+                    <div class="accordion-body">
+                      <li><strong>15% de descuento en medicamentos en caja</strong></li>
+                      <li>Presentando credencial</li>
+                      <li>No aplica a perfumería y accesorios</li>
+                      <li>No acumulable con otros descuentos
+                        de obra social.</li>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="accordion-item,flex-container">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                      aria-controls="panelsStayOpen-collapseThree">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            Jubilados y personas con CUD
+                          </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                          aria-labelledby="panelsStayOpen-headingThree">
+                          <div class="accordion-body">
+                            <li><strong>10% de descuento en medicamentos en caja</strong></li>
+                            <li>Presentando credencial</li>
+                            <li>No aplica a perfumería y accesorios</li>
+                            <li>No acumulable con otros descuentos
+                              de obra social.</li>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+</body>
+<p><a href="../index.html">Volver...</a></p>
+
 </html>
