--- a/ProyectoCaC/pages/llegar.html
+++ b/ProyectoCaC/pages/llegar.html
@@ -40,5 +40,5 @@
   <h1>Como llegar</h1>
   <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
   <p><img src="../img/llegar.jpeg" alt="Imagen de direccion" width="1000"></p>
-  <p><a href="../index.html">Volver...</a></p>
+  <p><a href="../index.html"><button type="button">Volver</button></a></p>
 </body>
