--- a/ProyectoCaC/pages/descuentos.html
+++ b/ProyectoCaC/pages/descuentos.html
@@ -139,6 +139,6 @@
                       </div>
                 </div>
 </body>
-<p><a href="../index.html">Volver...</a></p>
+<p><a href="../index.html"><button type="button">Volver</button></a></p>
 
 </html>
