--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -38,14 +38,14 @@
     </div>
   </nav>
   <header>
-    <h1>Farmacia Plaza la Carolina</h1>
-    <h2>La Farmacia de tu confianza</h2>
+    <h1 class="centrado">Farmacia Plaza la Carolina</h1>
+    <h2 class="centrado">La Farmacia de tu confianza</h2>
   </header>
   <nav>
     <ul>
-      <li><a href="pages/pedidos.html">Pedidos Online</a></li>
-      <li><a href="pages/llegar.html">Cómo llegar</a></li>
-      <li><a href="pages/descuentos.html">Descuentos Exclusivos</a> </li>
+      <li><a href="pages/pedidos.html"><button type="button">Pedidos Online</button></a></li>
+      <li><a href="pages/llegar.html"><button type="button">Como llegar</button></a></li>
+      <li><a href="pages/descuentos.html"><button type="button">Descuentos exclusivos</button></a> </li>
     </ul>
     <h3> Nuestra historia</h3>
     <h4>Conocenos...</h4>
@@ -84,10 +84,12 @@
 
     </p>
 
-    <footer>
-      <p>2023 - Copyright</p>
-    </footer>
   </nav>
+  
+  <footer>
+    <p>© Copyright 2023</p>
+    <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
