--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Farmacia</a>
+      <a class="navbar-brand" href="index.html">Farmacia</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,13 +22,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Pedidos Online</a>
+            <a class="nav-link active" aria-current="page" href="pages/pedidos.html">Pedidos Online</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Cómo llegar</a>
+            <a class="nav-link" href="pages/llegar.html">Cómo llegar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Descuentos Exclusivos</a>
+            <a class="nav-link" href="pages/descuentos.html">Descuentos Exclusivos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" aria-disabled="true">X</a>
@@ -42,11 +42,6 @@
     <h2 class="centrado">La Farmacia de tu confianza</h2>
   </header>
   <nav>
-    <ul>
-      <li><a href="pages/pedidos.html"><button type="button">Pedidos Online</button></a></li>
-      <li><a href="pages/llegar.html"><button type="button">Como llegar</button></a></li>
-      <li><a href="pages/descuentos.html"><button type="button">Descuentos exclusivos</button></a> </li>
-    </ul>
     <h3> Nuestra historia</h3>
     <h4>Conocenos...</h4>
 
