--- a/ProyectoCaC/pages/llegar.html
+++ b/ProyectoCaC/pages/llegar.html
@@ -8,11 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-  <!-- <link rel="stylesheet" href="../css/style.css"> -->
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
     <div class=" container-fluid">
-  <a class="navbar-brand" href="#">Farmacia</a>
+  <a class="navbar-brand" href="../index.html">Farmacia</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -20,13 +20,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Pedidos Online</a>
+        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Cómo llegar</a>
+        <a class="nav-link" href="../pages/llegar.html">Cómo llegar</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Descuentos Exclusivos</a>
+        <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" aria-disabled="true">X</a>
@@ -37,8 +37,17 @@
 </nav>
 
 <body>
-  <h1>Como llegar</h1>
-  <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-  <p><img src="../img/llegar.jpeg" alt="Imagen de direccion" width="1000"></p>
+  <header>
+    <h1 class="centrado">Como llegar a nuestro local</h1>
+  <p class="centrado-parrafo">C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+  </header>
+  <div class="centrar-imagen">
+  <a href="https://www.google.com/maps/place/Farmacia+Plaza+La+Carolina+S.C.S./@-34.8722199,-58.2113619,15z/data=!3m1!4b1!4m10!1m2!2m1!1sfarmacia+plaza+carolina!3m6!1s0x95a2d78361fc4327:0x4a3eb5bb7d8c282f!8m2!3d-34.8722389!4d-58.1929079!15sChdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYVoZIhdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYZIBCHBoYXJtYWN54AEA!16s%2Fg%2F1tf6szmb?entry=ttu"><img src="../img/llegar.jpeg" alt="Imagen de direccion" width="800"></a>
+</div>
+  <footer>
+    <p>© Copyright 2023</p>
+    <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+  </footer>
+
   <p><a href="../index.html"><button type="button">Volver</button></a></p>
 </body>
