--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -8,11 +8,11 @@
   <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="../css/style.css"> -->
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
     <div class=" container-fluid">
-  <a class="navbar-brand" href="#">Farmacia</a>
+  <a class="navbar-brand" href="../index.html">Farmacia</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -20,13 +20,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Pedidos Online</a>
+        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Cómo llegar</a>
+        <a class="nav-link" href="../pages/llegar.html">Cómo llegar</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Descuentos Exclusivos</a>
+        <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" aria-disabled="true">X</a>
@@ -37,12 +37,19 @@
 </nav>
 
 <body>
-  <h1>PEDIDOS ONLINE</h1>
-  <h2>Cargás la receta y te lo llevamos.</h2>
+  <header>
+  <h1 class="centrado">PEDIDOS ONLINE</h1>
+  <h2 class="centrado">Cargás la receta y te lo llevamos.</h2>
+</header>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-</body>
 <p><a href="../index.html"><button type="button">Volver</button></a></p>
 
+<footer>
+  <p>© Copyright 2023</p>
+  <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+</footer>
+</body>
 </html>
