--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -31,6 +31,9 @@
             <a class="nav-link" href="pages/descuentos.html">Descuentos Exclusivos</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="pages/api.html">Registrate</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link disabled" aria-disabled="true">X</a>
           </li>
         </ul>
