Cambio nav bar a contactanos

--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="pages/descuentos.html">Descuentos Exclusivos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="pages/api.html">Registrate</a>
+            <a class="nav-link" aria-current="page" href="pages/api.html">Contactanos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" aria-disabled="true">X</a>
