--- a/ProyectoCaC/pages/descuentos.html
+++ b/ProyectoCaC/pages/descuentos.html
@@ -20,16 +20,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online</a>
+        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img src="../img/carritocompra.png"></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../pages/llegar.html">Cómo llegar</a>
+        <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos</a>
+        <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos</a>
+        <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img src="../img/contacto.png"></a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" aria-disabled="true">X</a>
