--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -42,7 +42,7 @@
   </nav>
   <header>
     <h1 class="centrado">Farmacia Plaza la Carolina</h1>
-    <h3 class="centrado">La Farmacia de tu confianza</h2>
+    <h2 class="subtitulo">La Farmacia de tu confianza</h2>
   </header>
   <nav>
     <h3> Nuestra historia</h3>
@@ -83,7 +83,6 @@
     </p>
 
   </nav>
-  
   <footer>
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
