--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -84,13 +84,14 @@
 
     </p>
 
-    <footer>
-      <p>2023 - Copyright</p>
-    </footer>
+   
   </nav>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+<footer>
+      <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar Whatsapp: 1154110787 <br>2023 - Copyright</p>
+</footer>  
 </body>
 
 </html>
