--- a/ProyectoCaC/pages/llegar.html
+++ b/ProyectoCaC/pages/llegar.html
@@ -41,4 +41,9 @@
   <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
   <p><img src="../img/llegar.jpeg" alt="Imagen de direccion" width="1000"></p>
   <p><a href="../index.html">Volver...</a></p>
+  
+  
+  <footer>
+    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar Whatsapp: 1154110787 <br>2023 - Copyright</p>
+  </footer>
 </body>
