--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <script src="https://fontawesome.com/icons/whatsapp?" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -22,7 +23,8 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="pages/pedidos.html">Pedidos Online<img src="img/carritocompra.png"></a>
+            <a class="nav-link active" aria-current="page" href="pages/pedidos.html">Pedidos Online<img
+                src="img/carritocompra.png"></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="pages/llegar.html">Cómo llegar<img src="img/direccion.png"></a>
@@ -82,10 +84,7 @@
 
     </p>
 
-<<<<<<< HEAD
-   
-=======
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
+
   </nav>
   <footer>
     <p>© Copyright 2023</p>
@@ -95,9 +94,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-<footer>
-      <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar Whatsapp: 1154110787 <br>2023 - Copyright</p>
-</footer>  
+  <footer>
+    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
+      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../ProyectoCaC/img/whatsapp-line.png"
+          class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487 <br>2023 - Copyright
+    </p>
+  </footer>
 </body>
 
 </html>
