--- a/ProyectoCaC/pages/api.html
+++ b/ProyectoCaC/pages/api.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../css/styleformulario.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class=" container-fluid">
   <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -57,6 +57,12 @@
   <footer>
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+    
+      <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
+        <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
+            class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487 <br>2023 - Copyright
+      </p>
+    
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
