--- a/ProyectoCaC/pages/llegar.html
+++ b/ProyectoCaC/pages/llegar.html
@@ -20,7 +20,8 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img src="../img/carritocompra.png"></a>
+        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
+            src="../img/carritocompra.png"></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
@@ -40,32 +41,29 @@
 </nav>
 
 <body>
-<<<<<<< HEAD
-  <h1>Como llegar</h1>
-  <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-  <p><img src="../img/llegar.jpeg" alt="Imagen de direccion" width="1000"></p>
-  <p><a href="../index.html">Volver...</a></p>
-  
-  
-  <footer>
-    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar Whatsapp: 1154110787 <br>2023 - Copyright</p>
-  </footer>
-=======
   <header>
-    <h1 class="centrado">Como llegar a nuestro local</h1>
-  <p class="centrado-parrafo">C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+    <h1 class="centrado">Cómo llegar a nuestro local</h1>
+    <p class="centrado-parrafo">C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
   </header>
   <div class="centrar-imagen">
-  <a href="https://www.google.com/maps/place/Farmacia+Plaza+La+Carolina+S.C.S./@-34.8722199,-58.2113619,15z/data=!3m1!4b1!4m10!1m2!2m1!1sfarmacia+plaza+carolina!3m6!1s0x95a2d78361fc4327:0x4a3eb5bb7d8c282f!8m2!3d-34.8722389!4d-58.1929079!15sChdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYVoZIhdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYZIBCHBoYXJtYWN54AEA!16s%2Fg%2F1tf6szmb?entry=ttu"><img src="../img/llegar.jpeg" alt="Imagen de direccion" width="800"></a>
-</div>
+    <a
+      href="https://www.google.com/maps/place/Farmacia+Plaza+La+Carolina+S.C.S./@-34.8722199,-58.2113619,15z/data=!3m1!4b1!4m10!1m2!2m1!1sfarmacia+plaza+carolina!3m6!1s0x95a2d78361fc4327:0x4a3eb5bb7d8c282f!8m2!3d-34.8722389!4d-58.1929079!15sChdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYVoZIhdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYZIBCHBoYXJtYWN54AEA!16s%2Fg%2F1tf6szmb?entry=ttu"><img
+        src="../img/llegar.jpeg" alt="Imagen de direccion" width="800"></a>
+  </div>
   <footer>
+
+    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
+      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
+          src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
+        <br>2023 - Copyright
+    </p>
+
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-  crossorigin="anonymous"></script>
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
 </body>
