--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -20,7 +20,8 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img src="../img/carritocompra.png"></a>
+        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
+            src="../img/carritocompra.png"></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
@@ -41,28 +42,38 @@
 
 <body>
   <header>
-  <h1 class="centrado">PEDIDOS ONLINE</h1>
-  <h2 class="centrado">Cargás la receta y te lo llevamos.</h2>
-</header>
+    <h1 class="centrado">PEDIDOS ONLINE</h1>
+    <h2 class="centrado">Cargás la receta y te lo llevamos.</h2>
+  </header>
+  <p>ENVIAS TU PEDIDO POR WHATSAPP <br>
+    Podés cargar la receta si es necesario.</p><br>
+  <p>PREPARAMOS TU PAQUETE <br>
+    Y nos ponemos en contacto.</p><br>
+  <p>TE LO LLEVAMOS A TU CASA<br>
+    Y podés pagar con tarjeta en la puerta.</p> <br>
 
-<footer>
-  <p>© Copyright 2023</p>
-  <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-</footer>
+  <p>Pedí por <a class="redsoc"
+      href="https://wa.me/541154110787?text=Gracias por contactarnos, por favor cargá la receta y en breve nos estamos comunicando"
+      target="_blank"><img src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
+  </p>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+
+  <footer>
+    <p>© Copyright 2023</p>
+    <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 
   <p><a href="../index.html">Volver...</a></p>
 
   <footer>
-    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar Whatsapp: 1154110787 <br>2023 - Copyright</p>
+    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar 
+      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
+        class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487 <br>2023 - Copyright</p>
   </footer>
 </body>
-<<<<<<< HEAD
 
-
-=======
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
 </html>
