--- a/ProyectoCaC/pages/descuentos.html
+++ b/ProyectoCaC/pages/descuentos.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -10,7 +10,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<<<<<<< HEAD
+
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
   <div class=" container-fluid">
     <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
@@ -123,79 +123,6 @@
 
 </body>
 
-=======
-<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
-    <div class=" container-fluid">
-  <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img src="../img/carritocompra.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img src="../img/contacto.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" aria-disabled="true">X</a>
-      </li>
-    </ul>
-  </div>
-  </div>
-</nav>
-<body>
-    <h1 id="colores">Descuentos Exclusivos</h1>
-  <h2 id="colores">Convenios únicos par cuidar tu bolsillo.</h2>
-    <div class="contenedor-padre">
-        <div class="contenedor-hijo">
-            <li><strong>20% de descuento en medicamentos en caja</strong></li>
-            <li>Presentando credencial</li>
-            <li>No aplica a perfumería y accesorios</li>
-            <li>No acumulable con otros descuentos
-              de obra social.</li>
-              <ol>Parque industrial Cir2</ol>
-            </div>
-        <div class="contenedor-hijo"><li><strong>15% de descuento en medicamentos en caja</strong></li>
-            <li>Presentando credencial</li>
-            <li>No aplica a perfumería y accesorios</li>
-            <li>No acumulable con otros descuentos
-              de obra social.</li>
-              <ol>Grupo Plaza - Linea 129</ol>
-            </div>
-        <div class="contenedor-hijo"><li><strong>15% de descuento en medicamentos en caja</strong></li>
-            <li>Presentando credencial</li>
-            <li>No aplica a perfumería y accesorios</li>
-            <li>No acumulable con otros descuentos
-              de obra social.</li>
-              <ol>Jubilados y personas con CUD</ol>
-            </div>
-        <div class="contenedor-hijo"> <li><strong>10% de descuento en medicamentos en caja</strong></li>
-            <li>Presentando credencial</li>
-            <li>No aplica a perfumería y accesorios</li>
-            <li>No acumulable con otros descuentos
-              de obra social.</li>
-            </div>
-    </div>
-
-    <footer>
-      <p>© Copyright 2023</p>
-      <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-</body>
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
 
 </html>
 
