--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -23,12 +23,8 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-<<<<<<< HEAD
             <a class="nav-link active" aria-current="page" href="pages/pedidos.html">Pedidos Online<img
                 src="img/carritocompra.png"></a>
-=======
-            <a class="nav-link active" aria-current="page" href="pages/pedidos.html">Pedidos Online<img src="img/carritocompra.png"></a>
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
           </li>
           <li class="nav-item">
             <a class="nav-link" href="pages/llegar.html">Cómo llegar<img src="img/direccion.png"></a>
@@ -50,49 +46,51 @@
     <h1 class="centrado">Farmacia Plaza la Carolina</h1>
     <h2 class="subtitulo">La Farmacia de tu confianza</h2>
   </header>
-  <nav>
-    <h3> Nuestra historia</h3>
-    <h4>Conocenos...</h4>
+  <main>
+    <div>
+      <h3> Nuestra historia</h3>
+      <h4>Conocenos...</h4>
 
-    <p>La farmacia fue inaugurada en el año 1972 de la mano de Antonio Ventimiglia, idóneo farmaceutico de la ciudad de
-      La Plata.<br>
-      "Ventimiglia", así era como se llamaba, fue la <b>primer farmacia</b> de <b>Ingeniero Allan</b> partido de
-      Florencio Varela, localizada a
-      pocas cuadras
-      de su ubicación acutal, frente a la plaza de La Carolina.<br>
-      Por la década del 70 el Dr. Héctor Frazao (médico cirujano), premiado por el municipio de Florecio Varela por
-      destacarse por su
-      esfuerzo y labor por el bien común, comienza a atender pacientes en La Carolina.<br>
-      Mientras tanto, en la farmacia del hospital de La Plata, trabajaba Ventimiglia y es allí donde se conocen.<br>
-      Ante el fuerte crecimiento poblacional, gracias a la pujante fábrica Peugeot, el barrio de La Carolina necesitaba
-      atención médica, entonces se
-      instala el
-      Dr. Frazao y ante la necesidad de una farmacia, para que la gente
-      que no se traslade kilómetros para comprar un medicamento, le propone a Ventimiglia que abra una farmacia.<br>
-      Así nació "Ventimiglia". Hay que recordar, que el Ministerio de Salud de la Provincia de Buenos Aires la habilitó
-      como
-      <b>"Farmacia Rural"</b>, esto se debe a que se encontraba alejada de todo centro urbano. Fue durante muchos años,
-      la única
-      farmacia rural en el partido de Florencio Varela.<br>
-      Desde el principio fue entendida por sus dueños: Antonio, su mujer Blanca Formini y su hijo Oscar Ventimiglia.
-      Cuando fallece Antonio, su hijo queda el mando de la farmacia y después de más de treinta años decide
-      venderla.<br>
-      LLega como nuevo dueño Ariel Sorini y le cambia el nombre a <b>"Farmacia Plaza La Carolina"</b><br>
-      Farmacia Plaza La Carolina, desde 1972 es reconocida como la farmacia del "barrio", la que brinda confianza por el
-      compromiso fundamental en dar la contención y atención personalizada que sus pacientes y clientes necesitan.
-      Por compartir este camino que empezamos hace ya más de 50 años, les queremos dar las gracias a todos nuestros
-      clientes.
-      y recordarles que... ¡estamos aqui para que se sientan mejor!<br>
-      Los saluda afectuosamente el equipo de Farmacia Plaza La Carolina.
+      <p>La farmacia fue inaugurada en el año 1972 de la mano de Antonio Ventimiglia, idóneo farmaceutico de la ciudad
+        de
+        La Plata.<br>
+        "Ventimiglia", así era como se llamaba, fue la <b>primer farmacia</b> de <b>Ingeniero Allan</b> partido de
+        Florencio Varela, localizada a
+        pocas cuadras
+        de su ubicación acutal, frente a la plaza de La Carolina.<br>
+        Por la década del 70 el Dr. Héctor Frazao (médico cirujano), premiado por el municipio de Florecio Varela por
+        destacarse por su
+        esfuerzo y labor por el bien común, comienza a atender pacientes en La Carolina.<br>
+        Mientras tanto, en la farmacia del hospital de La Plata, trabajaba Ventimiglia y es allí donde se conocen.<br>
+        Ante el fuerte crecimiento poblacional, gracias a la pujante fábrica Peugeot, el barrio de La Carolina
+        necesitaba
+        atención médica, entonces se
+        instala el
+        Dr. Frazao y ante la necesidad de una farmacia, para que la gente
+        que no se traslade kilómetros para comprar un medicamento, le propone a Ventimiglia que abra una farmacia.<br>
+        Así nació "Ventimiglia". Hay que recordar, que el Ministerio de Salud de la Provincia de Buenos Aires la
+        habilitó
+        como
+        <b>"Farmacia Rural"</b>, esto se debe a que se encontraba alejada de todo centro urbano. Fue durante muchos
+        años,
+        la única
+        farmacia rural en el partido de Florencio Varela.<br>
+        Desde el principio fue entendida por sus dueños: Antonio, su mujer Blanca Formini y su hijo Oscar Ventimiglia.
+        Cuando fallece Antonio, su hijo queda el mando de la farmacia y después de más de treinta años decide
+        venderla.<br>
+        LLega como nuevo dueño Ariel Sorini y le cambia el nombre a <b>"Farmacia Plaza La Carolina"</b><br>
+        Farmacia Plaza La Carolina, desde 1972 es reconocida como la farmacia del "barrio", la que brinda confianza por
+        el
+        compromiso fundamental en dar la contención y atención personalizada que sus pacientes y clientes necesitan.
+        Por compartir este camino que empezamos hace ya más de 50 años, les queremos dar las gracias a todos nuestros
+        clientes.
+        y recordarles que... ¡estamos aqui para que se sientan mejor!<br>
+        Los saluda afectuosamente el equipo de Farmacia Plaza La Carolina.
 
 
-    </p>
-
-<<<<<<< HEAD
-
-=======
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
-  </nav>
+      </p>
+    </div>
+  </main>
   <footer>
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
@@ -103,8 +101,9 @@
     crossorigin="anonymous"></script>
   <footer>
     <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
-      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../ProyectoCaC/img/whatsapp-line.png"
-          class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487 <br>2023 - Copyright
+      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
+          src="../ProyectoCaC/img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
+        <br>2023 - Copyright
     </p>
   </footer>
 </body>
