--- a/ProyectoCaC/pages/api.html
+++ b/ProyectoCaC/pages/api.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,72 +10,72 @@
   <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="../css/styleformulario.css">
 </head>
-<body>
-<<<<<<< HEAD
-  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
-=======
-  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
-    <div class=" container-fluid">
-  <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img src="../img/carritocompra.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img src="../img/contacto.png"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" aria-disabled="true">X</a>
-      </li>
-    </ul>
-  </div>
+
+<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
+  <div class=" container-fluid">
+    <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
+              src="../img/carritocompra.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img
+              src="../img/contacto.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">X</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
-  <h1 class="centrado">Formulario de Contacto</h1>
-  <form id="contactForm">
-    <label for="nombre">Nombre:</label>
-    <input type="text" id="nombre" name="nombre" required><br>
 
-    <label for="email">Correo Electrónico:</label>
-    <input type="email" id="email" name="email" required><br>
 
-    <label for="mensaje">Mensaje:</label>
-    <textarea id="mensaje" name="mensaje" rows="4" required></textarea><br>
 
-    <button type="submit">Enviar</button>
-  </form>
+  <body>
+    <h1 class="centrado">Formulario de Contacto</h1>
+    <form id="contactForm">
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required><br>
 
-  <script src="validacion.js"></script>
+      <label for="email">Correo Electrónico:</label>
+      <input type="email" id="email" name="email" required><br>
 
-  <footer>
-    <p>© Copyright 2023</p>
-    <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-<<<<<<< HEAD
-    
+      <label for="mensaje">Mensaje:</label>
+      <textarea id="mensaje" name="mensaje" rows="4" required></textarea><br>
+
+      <button type="submit">Enviar</button>
+    </form>
+
+    <script src="validacion.js"></script>
+
+    <footer>
+      <p>© Copyright 2023</p>
+      <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
       <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
         <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
             class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487 <br>2023 - Copyright
       </p>
-    
-=======
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
-  </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-  crossorigin="anonymous"></script>
 
-</body>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
+
+  </body>
+
 </html>
