--- a/ProyectoCaC/pages/llegar.html
+++ b/ProyectoCaC/pages/llegar.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
     <div class=" container-fluid">
   <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
@@ -20,12 +21,8 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-<<<<<<< HEAD
         <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
             src="../img/carritocompra.png"></a>
-=======
-        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img src="../img/carritocompra.png"></a>
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
       </li>
       <li class="nav-item">
         <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
@@ -46,7 +43,7 @@
 
 <body>
   <header>
-<<<<<<< HEAD
+
     <h1 class="centrado">Cómo llegar a nuestro local</h1>
     <p class="centrado-parrafo">C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
   </header>
@@ -58,31 +55,16 @@
   <footer>
 
     <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
-      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
-          src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
+      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
+          class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
         <br>2023 - Copyright
     </p>
 
-=======
-    <h1 class="centrado">Como llegar a nuestro local</h1>
-  <p class="centrado-parrafo">C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-  </header>
-  <div class="centrar-imagen">
-  <a href="https://www.google.com/maps/place/Farmacia+Plaza+La+Carolina+S.C.S./@-34.8722199,-58.2113619,15z/data=!3m1!4b1!4m10!1m2!2m1!1sfarmacia+plaza+carolina!3m6!1s0x95a2d78361fc4327:0x4a3eb5bb7d8c282f!8m2!3d-34.8722389!4d-58.1929079!15sChdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYVoZIhdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYZIBCHBoYXJtYWN54AEA!16s%2Fg%2F1tf6szmb?entry=ttu"><img src="../img/llegar.jpeg" alt="Imagen de direccion" width="800"></a>
-</div>
-  <footer>
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
+
+
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-<<<<<<< HEAD
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-=======
-  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-  crossorigin="anonymous"></script>
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
 
 </body>
