--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -10,7 +10,8 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
+
+<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class=" container-fluid">
   <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -23,8 +24,6 @@
 
         <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
             src="../img/carritocompra.png"></a>
-
-        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img src="../img/carritocompra.png"></a>
 
       </li>
       <li class="nav-item">
@@ -74,9 +73,11 @@
   <p><a href="../index.html">Volver...</a></p>
 
   <footer>
-    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar 
+    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
       <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
-        class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487 <br>2023 - Copyright</p>
+          class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487 <br>2023 - Copyright
+    </p>
   </footer>
 </body>
+
 </html>
