--- a/ProyectoCaC/pages/descuentos.html
+++ b/ProyectoCaC/pages/descuentos.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
+
+<body>
+
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
   <div class=" container-fluid">
     <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
@@ -41,34 +44,35 @@
     </div>
   </div>
 </nav>
-
-<body>
-  <h1 id="colores">Descuentos Exclusivos</h1>
-  <h2 id="colores">Convenios únicos par cuidar tu bolsillo.</h2>
+<header>
+  <h1 class="centrado">Descuentos Exclusivos</h1>
+  <h2 class="subtitulo">Convenios únicos par cuidar tu bolsillo.</h2>
+</header>
   <div class="contenedor-padre">
     <div class="contenedor-hijo">
+      <ol>Parque industrial Cir2</ol>
       <li><strong>20% de descuento en medicamentos en caja</strong></li>
       <li>Presentando credencial</li>
       <li>No aplica a perfumería y accesorios</li>
       <li>No acumulable con otros descuentos
         de obra social.</li>
-      <ol>Parque industrial Cir2</ol>
     </div>
     <div class="contenedor-hijo">
-      <li><strong>15% de descuento en medicamentos en caja</strong></li>
-      <li>Presentando credencial</li>
-      <li>No aplica a perfumería y accesorios</li>
-      <li>No acumulable con otros descuentos
-        de obra social.</li>
       <ol>Grupo Plaza - Linea 129</ol>
-    </div>
-    <div class="contenedor-hijo">
       <li><strong>15% de descuento en medicamentos en caja</strong></li>
       <li>Presentando credencial</li>
       <li>No aplica a perfumería y accesorios</li>
       <li>No acumulable con otros descuentos
         de obra social.</li>
+    </div>
+    <div class="contenedor-hijo">
       <ol>Jubilados y personas con CUD</ol>
+      <li><strong>15% de descuento en medicamentos en caja</strong></li>
+      <li>Presentando credencial</li>
+      <li>No aplica a perfumería y accesorios</li>
+      <li>No acumulable con otros descuentos
+        de obra social.</li>
+      
     </div>
     <div class="contenedor-hijo">
       <li><strong>10% de descuento en medicamentos en caja</strong></li>
@@ -79,48 +83,20 @@
     </div>
   </div>
 
-
-  <div class="accordion-item,flex-container">
-    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-        data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-        aria-controls="panelsStayOpen-collapseThree">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-              aria-controls="panelsStayOpen-collapseThree">
-              Jubilados y personas con CUD
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
-            aria-labelledby="panelsStayOpen-headingThree">
-            <div class="accordion-body">
-              <li><strong>10% de descuento en medicamentos en caja</strong></li>
-              <li>Presentando credencial</li>
-              <li>No aplica a perfumería y accesorios</li>
-              <li>No acumulable con otros descuentos
-                de obra social.</li>
-            </div>
-          </div>
-        </div>
-  </div>
+  <div class="fondo-verde">
   <h2>¿Queres que tus empleados obtengan beneficios?</h2><br>
   <p>Si sos empleador y le queres dar un beneficio a tu empleado, para que accedan a descuentos exclusivos, te damos las
     herramientas para que puedas lograrlo!<br>
     Comunicate con nosostros para que te contemos cómo acceder al beneficio.</p>
-  <p><a href="../index.html">Volver...</a></p>
+  </div>
 
   <footer>
+    <p>© Copyright 2023</p>
+    <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
     <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
       <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
           src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
-        <br>2023 - Copyright
-    </p>
   </footer>
-
-
-
 </body>
 
 
