--- a/ProyectoCaC/pages/llegar.html
+++ b/ProyectoCaC/pages/llegar.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
+<body>
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
     <div class=" container-fluid">
   <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
@@ -41,7 +42,6 @@
   </div>
 </nav>
 
-<body>
   <header>
 
     <h1 class="centrado">Cómo llegar a nuestro local</h1>
@@ -52,19 +52,12 @@
       href="https://www.google.com/maps/place/Farmacia+Plaza+La+Carolina+S.C.S./@-34.8722199,-58.2113619,15z/data=!3m1!4b1!4m10!1m2!2m1!1sfarmacia+plaza+carolina!3m6!1s0x95a2d78361fc4327:0x4a3eb5bb7d8c282f!8m2!3d-34.8722389!4d-58.1929079!15sChdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYVoZIhdmYXJtYWNpYSBwbGF6YSBjYXJvbGluYZIBCHBoYXJtYWN54AEA!16s%2Fg%2F1tf6szmb?entry=ttu"><img
         src="../img/llegar.jpeg" alt="Imagen de direccion" width="800"></a>
   </div>
-  <footer>
-
-    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
-      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
-          class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
-        <br>2023 - Copyright
-    </p>
-
-
-
-    <p>© Copyright 2023</p>
-    <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
-  </footer>
-
-
+    <footer>
+      <p>© Copyright 2023</p>
+      <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+      <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
+        <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
+            src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
+    </footer>
 </body>
+</html>
