--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -10,7 +10,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
 </head>
-
+<body>
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class=" container-fluid">
   <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
@@ -43,11 +43,13 @@
   </div>
 </nav>
 
-<body>
+
+  <div id="colores">
   <header>
     <h1 class="centrado">PEDIDOS ONLINE</h1>
     <h2 class="centrado">Cargás la receta y te lo llevamos.</h2>
   </header>
+  <div class="margenes">
   <p>ENVIAS TU PEDIDO POR WHATSAPP <br>
     Podés cargar la receta si es necesario.</p><br>
   <p>PREPARAMOS TU PAQUETE <br>
@@ -59,25 +61,21 @@
       href="https://wa.me/541154110787?text=Gracias por contactarnos, por favor cargá la receta y en breve nos estamos comunicando"
       target="_blank"><img src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
   </p>
+</div>
 
 
   <footer>
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+    <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar</p>
+     <p><a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
+          src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487</p> 
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 
-  <p><a href="../index.html">Volver...</a></p>
-
-  <footer>
-    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
-      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img src="../img/whatsapp-line.png"
-          class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487 <br>2023 - Copyright
-    </p>
-  </footer>
 </body>
 
 </html>
