--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -46,7 +46,7 @@
     <h1 class="centrado">Farmacia Plaza la Carolina</h1>
     <h2 class="subtitulo">La Farmacia de tu confianza</h2>
   </header>
-  <main>
+  <main class="fondo-azul">
     <div>
       <h3> Nuestra historia</h3>
       <h4>Conocenos...</h4>
@@ -94,18 +94,15 @@
   <footer>
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+    <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
+      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
+          src="../ProyectoCaC/img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-  <footer>
-    <p>Tel:(02229)493789 email:fcialaplaza@c3l.com.ar
-      <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
-          src="../ProyectoCaC/img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
-        <br>2023 - Copyright
-    </p>
-  </footer>
+  
 </body>
 
 </html>
