contenido de remedios

--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -55,28 +55,28 @@
     <div class="producto">
         <img src="../img/producto1.jpg" alt="Producto 1" width="50%" height="50%">
         <h3>Ibupirac</h3>
-        <p>Antiinflamatorio no esteroideo (AINE) que se utiliza para aliviar el dolor y la fiebre.</p>
+        <p>Antiinflamatorio no esteroideo para aliviar el dolor y la fiebre.</p>
         <p>Precio: 800$</p>
         <button>Comprar</button>
     </div>
     <div class="producto">
         <img src="../img/producto2.jpg" alt="Producto 2" width="50%" height="50%">
         <h3>Paracetamol</h3>
-        <p>Analgésico y antipirético utilizado comúnmente para reducir la fiebre y aliviar el dolor leve a moderado.</p>
+        <p>Analgésico y antipirético para reducir la fiebre y aliviar el dolor.</p>
         <p>Precio: 700$</p>
         <button>Comprar</button>
     </div>
     <div class="producto">
         <img src="../img/producto3.jpg" alt="Producto 3" width="50%" height="50%">
         <h3>Aspirina</h3>
-        <p>aliviar el dolor, reducir la fiebre y prevenir la formación de coágulos sanguíneos..</p>
+        <p>Alivia el dolor, reduce la fiebre y preveiene la formación de coágulos sanguíneos.</p>
         <p>Precio: 1000$</p>
         <button>Comprar</button>
     </div>
     <div class="producto">
         <img src="../img/producto4.jpg" alt="Producto 4" width="50%" height="50%">
         <h3>Aerotina</h3>
-        <p>Antihistamínico utilizado para aliviar los síntomas de las alergias, como la congestión nasal y los estornudos.</p>
+        <p>Antihistamínico para aliviar los síntomas de las alergias, como la congestión nasal.</p>
         <p>Precio: 500$</p>
         <button>Comprar</button>
     </div>
