Agregado de animacion

--- a/ProyectoCaC/pages/api.html
+++ b/ProyectoCaC/pages/api.html
@@ -43,7 +43,7 @@
   </div>
 </nav>
 <header class="centrado">
-    <h1 class="centrado">Formulario de Contacto</h1>
+    <h1 class="centrado" id="animacionhome">Formulario de Contacto</h1>
   </header>
     <form id="contactForm">
       <label for="nombre">Nombre:</label>
