cambio de productos

--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -54,9 +54,9 @@
   <div class="catalogo">
     <div class="producto">
         <img src="../img/producto1.jpg" alt="Producto 1" width="50%" height="50%">
-        <h3>Ibupirac</h3>
+        <h3>Actron</h3>
         <p>Antiinflamatorio no esteroideo para aliviar el dolor y la fiebre.</p>
-        <p>Precio: 800$</p>
+        <p>Precio: 1000$</p>
         <button>Comprar</button>
     </div>
     <div class="producto">
@@ -101,7 +101,7 @@
     <form action="#" method="post">
         <label for="producto">Producto:</label>
         <select id="producto" name="producto">
-            <option value="producto1">Ibupirac</option>
+            <option value="producto1">Actron</option>
             <option value="producto2">Paracetamol</option>
             <option value="producto3">Aspirina</option>
             <option value="producto4">Aerotina</option>
