Corregir link de div / footer

--- a/ProyectoCaC/pages/pedidos.html
+++ b/ProyectoCaC/pages/pedidos.html
@@ -132,10 +132,9 @@
   <p>TE LO LLEVAMOS A TU CASA<br>
     Y podés pagar con tarjeta en la puerta.</p> <br>
 
-  <p>Pedí por <a class="redsoc"
-      href="https://wa.me/541154110787?text=Gracias por contactarnos, por favor cargá la receta y en breve nos estamos comunicando"
+  <p>Pedí por <a class="redsoc" href="https://wa.me/541154110787?text=Gracias por contactarnos, por favor cargá la receta y en breve nos estamos comunicando"
       target="_blank"><img src="../img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
-  </p>
+  </p></a>
   </div>
 
 
