Agregado de imagen con float

--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -51,7 +51,7 @@
       <h3> Nuestra historia</h3>
       <h4>Conocenos...</h4>
 
-      <p>La farmacia fue inaugurada en el año 1972 de la mano de Antonio Ventimiglia, idóneo farmaceutico de la ciudad
+      <p> <img class="imagen-derecha"src="img/farmaciapordentro.jpg" alt="Foto de la Farmacia">La farmacia fue inaugurada en el año 1972 de la mano de Antonio Ventimiglia, idóneo farmaceutico de la ciudad
         de
         La Plata.<br>
         "Ventimiglia", así era como se llamaba, fue la <b>primer farmacia</b> de <b>Ingeniero Allan</b> partido de
