Agregado de imagen index

--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -68,7 +68,8 @@
         instala el
         Dr. Frazao y ante la necesidad de una farmacia, para que la gente
         que no se traslade kilómetros para comprar un medicamento, le propone a Ventimiglia que abra una farmacia.<br>
-        Así nació "Ventimiglia". Hay que recordar, que el Ministerio de Salud de la Provincia de Buenos Aires la
+        
+        Así nació "Ventimiglia". Hay que recordar, que el Ministerio de Salud de la <img class="imagen-izquierda"src="img/farmaciaporfuera.jpg" alt="Foto de la Farmacia"> Provincia de Buenos Aires la
         habilitó
         como
         <b>"Farmacia Rural"</b>, esto se debe a que se encontraba alejada de todo centro urbano. Fue durante muchos
