Cambio de fondo

--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -46,7 +46,7 @@
     <h1 class="centrado">Farmacia Plaza la Carolina</h1>
     <h2 class="subtitulo">La Farmacia de tu confianza</h2>
   </header>
-  <main class="fondo-azul">
+  <main class="fondo-verde">
     <div>
       <h3> Nuestra historia</h3>
       <h4>Conocenos...</h4>
